Add Fastify server with Firebase authentication and Socket.IO
- Implement Firebase Admin SDK with environment variables
- Add Socket.IO authentication and connection handling
- Create tournament and room management systems
- Add comprehensive error handling for token expiration
- Configure TypeScript and development tools
- Include example environment configuration

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,19 @@ test/types/index.js
 
 # compiled app
 dist
+
+# Environment variables and secrets
+.env
+.env.local
+.env.production
+.env.development
+*.env
+
+# Service account keys and credentials
+src/serviceAccountKey.json
+**/serviceAccountKey.json
+**/*service-account*.json
+**/*credentials*.json
+firebase-adminsdk-*.json
+
+tournament-example
