--- a/package.json
+++ b/package.json
@@ -3,27 +3,37 @@
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
-    "start": "node dist/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --import tsx src/app.ts",
     "build": "tsc",
-    "dev": "nodemon --watch src src/app.ts"
+    "start": "node dist/app.ts",
+    "dev:watch": "nodemon"
   },
   "keywords": [],
-  "author": "Faraz Patankar",
+  "author": "eugen",
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^6.0.1",
+    "@fastify/cors": "^11.1.0",
     "@fastify/sensible": "^6.0.1",
+    "dayjs": "^1.11.18",
+    "dotenv": "^17.2.3",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.1",
+    "fastify-socket.io": "^5.1.0",
+    "firebase-admin": "^13.5.0",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^22.7.2",
     "fastify-tsconfig": "^2.0.0",
     "nodemon": "^3.1.7",
+    "tsx": "^4.7.0",
     "typescript": "^5.6.2"
   },
   "engines": {
     "node": "22.x"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
