--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --import tsx src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.ts",
+    "start": "node dist/app.js",
     "dev:watch": "nodemon"
   },
   "keywords": [],
